# proxie

./: .env.example  .gitignore  ALEMBIC_USAGE.md  CHANGELOG.md  CODEBASE_REVIEW.md  DOCUMENTATION_STATUS.md  DUPLICATE_MESSAGES_FIX.md  DUPLICATE_MESSAGES_FIX_V2.md  Dockerfile  FINAL_PROJECT_SUMMARY.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PHASE_1_2_SUMMARY.md  PHASE_2_COMPLETE.md  PHASE_3_COMPLETE.md  PHASE_4_COMPLETE.md  PROJECT_COMPLETE.md  QUICK_REFERENCE.md  QUICK_START_GUIDE.md  README.md  REFACTORING_GUIDE.md  REMAINING_TASKS.md  SENTRY_INTEGRATION_COMPLETE.md  TASK_1.1_COMPLETE.md  TASK_1.2_COMPLETE.md  TASK_1.3_1.4_COMPLETE.md  TASK_2.1_COMPLETE.md  TASK_2.2_2.3_COMPLETE.md  TASK_3.1_COMPLETE.md  TASK_3.2_COMPLETE.md  TASK_3.3_COMPLETE.md  TASK_3.4_COMPLETE.md  TASK_4.1_COMPLETE.md  TASK_4.2_COMPLETE.md  TASK_4.3_COMPLETE.md  TASK_4.4_COMPLETE.md  TASK_TRACKER.md  VERIFICATION_SUMMARY.md  debug_request.py  (+5 more)
.antigravity/: rules.md
.antigravity/skills/: proxie-patterns.md
.cursor/: rules.md
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 001_add_indexes.py
docs/: DOCUMENTATION_UPDATE.md
k8s/: api-deployment.yaml  deploy.sh  ingress.yaml  namespace.yaml  postgres-statefulset.yaml  redis-deployment.yaml  secrets.yaml.template  ssl.yaml  web-deployment.yaml  worker-deployment.yaml
migrations/: add_indexes.sql  agent_memory_tables.sql  sprint_10_profiles_and_requests.sql
mobile/: App.js  App.web.js  package-lock.json  package.json
pilot/: feedback.md  metrics.md  providers.md
scripts/: fix_db_schema.py  migrate.py  seed_data.py  setup_gke_pilot.sh  test_chat_integration.py  test_consumer_profile.py  test_llm_cache.py  test_llm_gateway.py  test_request_retrieval.py  test_session_serialization.py  test_worker_integration.py  verify_a2a.py  verify_handoff.py  verify_memory_layer.py  verify_personal_agent.py  verify_phase_1.py  verify_provider_agent.py  verify_specialist.py  verify_sprint_10.py  wait_for_db.py
tests/: conftest.py  test_api.py  test_api_flow.py  test_auth.py  test_chat_context_integration.py  test_context_awareness.py  test_errors.py  test_models.py  test_ownership.py  test_rbac.py  test_socket_auth.py
web/: index.html  package-lock.json  package.json  vite.config.js
web-next/: .gitignore  Dockerfile  SENTRY_SETUP.md  next.config.mjs  package-lock.json  package.json  playwright.config.js  sentry.client.config.js  sentry.edge.config.js  sentry.server.config.js
(+244 files in other folders)
